# suggest

./: Makefile  README.md  Suggest.hs  TST.hs  Wildcard.hs  suggest.cabal
resources/: dict  frequency  search.html
