name:               suggest
version:            0.0
homepage:           https://github.com/rostayob/suggest
synopsis:           Auto completion and spell corrector server
category:           Web
license:            GPL-2
author:             Francesco Mazzoli
maintainer:         Francesco Mazzoli <f@mazzo.li>
cabal-version:      >= 1.6
build-type:         Simple

source-repository head
  type:      git
  location:  git://github.com/rostayob/suggest
  branch:    master

executable suggest
  main-is:           Suggest.hs

  build-depends:     base >= 4 && < 5
                   , warp
                   , wai
                   , conduit
                   , blaze-builder
                   , http-types
                   , utf8-string
                   , bytestring
                   , mtl

  GHC-options:       -Wall -O2 -fno-warn-unused-do-bind -threaded
